Обновил статус приложения

--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -18,4 +18,4 @@ html(lang="ru")
         block content
         include ./../sections/_footer.pug
 
-        script(src="js/script.min.js" type="module")
+        script(src="js/script.min.js")
