--- a/src/pug/sections/_enter.pug
+++ b/src/pug/sections/_enter.pug
@@ -1,4 +1,4 @@
-section.enter(style="padding-top: 13px")
+section.enter
     .enter__wrapper
         video(autoplay muted loop preload poster="img/coverflow.png").enter__background
             source(src='video/digital_wave_background_01.webm' type="video/webm")
@@ -6,4 +6,4 @@ section.enter(style="padding-top: 13px")
             source(src="img/coverflow.png" type="image/png")
         h1 Цифровая среда РГСУ
         p.enter__subtitle Единое информационное <br> и сервисное пространством университета
-        button(type="button").enter__button.btn.btn--transparent Войти в личный кабинет
+        button(type="button").enter__button.btn.btn--transparent.js-menu-login Войти в личный кабинет
