--- a/src/pug/sections/_extra-info.pug
+++ b/src/pug/sections/_extra-info.pug
@@ -30,8 +30,10 @@ section.extra-info
                     | Активист, тим-лидер, организатор, интересуюсь наставничеством, историей, искусством, философией.
                 h3.extra-info__card-title.title Знание языков
                 ul.extra-info__card-languages.languages
-                    li.languages__item 🇩🇪 Немецкий
-                    li.languages__item 🇪🇸 Испанский
+                    li.languages__item Немецкий
+                        span.flag-DE
+                    li.languages__item Испанский
+                        span.flag-ES
 
             article.extra-info__card.extra-info__card-reccomendations.reccomendations.card--stack.scrollbar-custom
                 h3.extra-info__card-title.title Рекомендации
