--- a/src/pug/sections/_parent.pug
+++ b/src/pug/sections/_parent.pug
@@ -3,11 +3,11 @@ main.main
         .my-children__container.container
             h2.my-children__title.title--large Мои дети
             .portfolio-cards__wrapper
-                +portfolio-card('card-avatar-1.webp', 'card-avatar-1.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '2', '75', 'digital-profile.html')
+                +portfolio-card('card-avatar-1.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '2', '75', 'digital-profile.html')
                     ul.portfolio-cards__buttons
                         li
                             a(href="my-children-profile.html").btn.btn--regular.portfolio-cards__button Открыть кабинет
-                +portfolio-card('card-avatar-2.webp', 'card-avatar-2.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '1', '95', 'digital-profile.html')
+                +portfolio-card( 'card-avatar-2.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '1', '95', 'digital-profile.html')
                     ul.portfolio-cards__buttons
                         li
                             a(href="my-children-profile.html").btn.btn--regular.portfolio-cards__button Открыть кабинет
