--- a/src/pug/sections/_portfolio-tabs.pug
+++ b/src/pug/sections/_portfolio-tabs.pug
@@ -4,12 +4,14 @@ section.portfolio-tabs
             h2.portfolio-tabs__title.title--large Портфолио по профессиям
             span.divider
         .portfolio-tabs__buttons
-            button(data-id="college").btn.portfolio-tabs__button.tabs__button.tabs__button--active Колледж
+            button(data-id="graduate").btn.portfolio-tabs__button.tabs__button.tabs__button--active Аспирантура
+            button(data-id="collegeBasic").btn.portfolio-tabs__button.tabs__button Среднее профессиональное (БУ)
+            button(data-id="college").btn.portfolio-tabs__button.tabs__button Среднее профессиональное (ПУ)
             button(data-id="bachelor").btn.portfolio-tabs__button.tabs__button Бакалавриат
-            button(data-id="specialty").btn.portfolio-tabs__button.tabs__button Специалитет
+            button(data-id="speciality").btn.portfolio-tabs__button.tabs__button Специалитет
             button(data-id="magistracy").btn.portfolio-tabs__button.tabs__button Магистратура
-            button(data-id="graduate").btn.portfolio-tabs__button.tabs__button Аспирантура
-        .portfolio-tabs__article.tabs__item.tabs__item--active(id="college")
+            button(data-id="residency").btn.portfolio-tabs__button.tabs__button Аспирантура, ординатура, адъюнктура
+        .portfolio-tabs__article.tabs__item.tabs__item--active(id="graduate")
             ul.portfolio__list
                 ul.portfolio__list-wrapper
                     li.portfolio__item
@@ -33,7 +35,6 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-                ul.portfolio__list-wrapper
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Социальная работа
@@ -55,7 +56,6 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-                ul.portfolio__list-wrapper
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Информационные системы (по отраслям)
@@ -77,7 +77,7 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-        .portfolio-tabs__article(id="bachelor").tabs__item
+        .portfolio-tabs__article(id="collegeBasic").tabs__item
             ul.portfolio__list
                 ul.portfolio__list-wrapper
                     li.portfolio__item
@@ -101,7 +101,6 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-                ul.portfolio__list-wrapper
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Социальная работа
@@ -123,7 +122,6 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-                ul.portfolio__list-wrapper
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Информационные системы (по отраслям)
@@ -144,7 +142,7 @@ section.portfolio-tabs
                             span.portfolio__description Издательское дело
                             span.divider
                             span.portfolio__counter 21
-        .portfolio-tabs__article(id="specialty").tabs__item
+        .portfolio-tabs__article(id="college").tabs__item
             ul.portfolio__list
                 ul.portfolio__list-wrapper
                     li.portfolio__item
@@ -168,7 +166,6 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-                ul.portfolio__list-wrapper
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Социальная работа
@@ -190,7 +187,136 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Информационные системы (по отраслям)
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Право и организация социального обеспечения
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Рациональное использование природохозяйственных комплексов
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Издательское дело
+                            span.divider
+                            span.portfolio__counter 21
+        .portfolio-tabs__article(id="bachelor").tabs__item
+            ul.portfolio__list
                 ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Банковское дело
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Гостиничный сервис
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Дизайн (по отраслям)
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Издатльское дело
+                            span.divider
+                            span.portfolio__counter 21
+
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Социальная работа
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Страховое дело (по отраслям)
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Туризм
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Экономика и бухгалтерский учет (по отраслям)
+                            span.divider
+                            span.portfolio__counter 21
+
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Информационные системы (по отраслям)
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Право и организация социального обеспечения
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Рациональное использование природохозяйственных комплексов
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Издательское дело
+                            span.divider
+                            span.portfolio__counter 21
+        .portfolio-tabs__article(id="speciality").tabs__item
+            ul.portfolio__list
+                ul.portfolio__list-wrapper
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Банковское дело
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Гостиничный сервис
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Дизайн (по отраслям)
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Издатльское дело
+                            span.divider
+                            span.portfolio__counter 21
+
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Социальная работа
+                            span.divider
+                            span.portfolio__counter 41
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Страховое дело (по отраслям)
+                            span.divider
+                            span.portfolio__counter 73
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Туризм
+                            span.divider
+                            span.portfolio__counter 27
+                    li.portfolio__item
+                        a.portfolio__link(href="#")
+                            span.portfolio__description Экономика и бухгалтерский учет (по отраслям)
+                            span.divider
+                            span.portfolio__counter 21
+
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Информационные системы (по отраслям)
@@ -235,7 +361,6 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-                ul.portfolio__list-wrapper
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Социальная работа
@@ -257,7 +382,6 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-                ul.portfolio__list-wrapper
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Информационные системы (по отраслям)
@@ -278,7 +402,7 @@ section.portfolio-tabs
                             span.portfolio__description Издательское дело
                             span.divider
                             span.portfolio__counter 21
-        .portfolio-tabs__article(id="graduate").tabs__item
+        .portfolio-tabs__article(id="residency").tabs__item
             ul.portfolio__list
                 ul.portfolio__list-wrapper
                     li.portfolio__item
@@ -302,7 +426,6 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-                ul.portfolio__list-wrapper
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Социальная работа
@@ -324,7 +447,6 @@ section.portfolio-tabs
                             span.divider
                             span.portfolio__counter 21
 
-                ul.portfolio__list-wrapper
                     li.portfolio__item
                         a.portfolio__link(href="#")
                             span.portfolio__description Информационные системы (по отраслям)
