--- a/src/pug/sections/_similar-profiles.pug
+++ b/src/pug/sections/_similar-profiles.pug
@@ -4,7 +4,7 @@ section.portfolio-cards.similar-profiles.no-print
             h2.portfolio-cards__title.title--large Похожие профили
         .similar-profiles__wrapper
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-1.webp', 'card-avatar-1.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '2', '75', 'digital-profile.html')
+                +portfolio-card( 'card-avatar-1.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '2', '75', 'digital-profile.html')
                     ul.achievements__list
                         li.achievement.achievement--handshake Достижение: Рукопожатие
                             svg.achievement-icon(width="18" height="18")
@@ -14,14 +14,14 @@ section.portfolio-cards.similar-profiles.no-print
                                 use(href="#trophy" )
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-2.webp', 'card-avatar-2.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '21', '1', '15',  'digital-profile.html')
+                +portfolio-card('card-avatar-2.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '21', '1', '15',  'digital-profile.html')
                     ul.achievements__list
                         li.achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#trophy")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-3.webp', 'card-avatar-3.png', 'Родион Нугзарович К.', 'Гуманитарный Факультет', 'Политология', '22', '2', '85',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-3.png', 'Родион Нугзарович К.', 'Гуманитарный Факультет', 'Политология', '22', '2', '85',  'digital-profile.html')
                     ul.achievements__list
                         li.achievement.achievement--paint-palette Достижение: Искусство
                             svg.achievement-icon(width="18" height="18")
