--- a/src/scss/general/variables.scss
+++ b/src/scss/general/variables.scss
@@ -8,7 +8,7 @@ $c-link: #9cbaf0;
 $c-grey: #f1f4f9;
 $c-darkgrey: #c3cad6;
 $c-green: #2BC584;
-$c-red: #E06364;
+$c-red: #e06364;
 
 $font: "Russia", "Arial", sans-serif;
 $font-alt: "Radical", "Arial", sans-serif;
