--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -22,37 +22,34 @@ header.page-header.js-header.no-print
                             a.js-menu-link.page-header__menu-link--exit(href="#") Завершить сеанс
 
         .page-header__login
-            button.page-header__login-button.js-menu-toggler.page-header__toggler Войти на портал
-
-            .login
-                .login__navigation
-                    ul.login__navigation-list
-                        li.login__navigation-item
-                            a.js-menu-link.js-menu-login(href="#") Мой профиль
-                        li.login__navigation-item
-                            a.js-menu-link(href="moderate.html") Модерирование
-                        li.login__navigation-item.login__navigation--exit
-                            a.js-menu-link.page-header__menu-link--exit(href="#") Завершить сеанс
-                .login__modal.modal__login
-                    button.modal-close.js-close-button Закрыть
-                    h3.modal__title Вход на сайт
-                    form.modal__form
-                        .modal__form-group.modal__form-group--mail
-                            label.form__label(for="email") Ваш email
-                            input(type="email" id="email" name="email" required placeholder='Укажите адрес электронной почты').form__input
-                        .modal__form-group.modal__form-group--password
-                            label.form__label(for="password") Введите пароль
-                            input(type="checkbox" checked=true)#show-password.modal__form-show
-                            label(for="show-password").modal__control-label.modal__control-label--showpassword
-                                svg.modal__checkbox-show(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'  width='32' height='32' title='Показать/скрыть пароль')
-                                    title Hide/Show Password
-                                    path(fill="#c3cad9" d='M24,9A23.654,23.654,0,0,0,2,24a23.633,23.633,0,0,0,44,0A23.643,23.643,0,0,0,24,9Zm0,25A10,10,0,1,1,34,24,10,10,0,0,1,24,34Zm0-16a6,6,0,1,0,6,6A6,6,0,0,0,24,18Z')
-                                    rect.closed-eye( fill="#c3cad9" x='20.133' y='2.117' height='44' transform='translate(23.536 -8.587) rotate(45)')
-                                    rect.closed-eye(x='22' y='3.984' width='4' height='44' transform='translate(25.403 -9.36) rotate(45)' style='fill:#fff')
-
-
-                            input(required placeholder='Пароль' id="password" name="password" type="text").form__input.form__input--password
-
+            button.js-menu-login.page-header__login-button.js-menu-toggler.page-header__toggler Войти на портал
+            .login__navigation
+                ul.login__navigation-list
+                    li.login__navigation-item
+                        a.js-menu-link.js-menu-login(href="#") Мой профиль
+                    li.login__navigation-item
+                        a.js-menu-link(href="moderate.html") Модерирование
+                    li.login__navigation-item.login__navigation--exit
+                        a.js-menu-link.page-header__menu-link--exit(href="#") Завершить сеанс
+        .login
+            .login__modal.modal__login
+                button.modal-close.js-close-button Закрыть
+                h3.modal__title Вход на сайт
+                form.modal__form
+                    .modal__form-group.modal__form-group--mail
+                        label.form__label(for="email") Ваш email
+                        input(type="email" id="email" name="email" required placeholder='Укажите адрес электронной почты').form__input
+                    .modal__form-group.modal__form-group--password
+                        label.form__label(for="password") Введите пароль
+                        input(type="checkbox" checked=true)#show-password.modal__form-show
+                        label(for="show-password").modal__control-label.modal__control-label--showpassword
+                            svg.modal__checkbox-show(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'  width='32' height='32' title='Показать/скрыть пароль')
+                                title Hide/Show Password
+                                path(fill="#c3cad9" d='M24,9A23.654,23.654,0,0,0,2,24a23.633,23.633,0,0,0,44,0A23.643,23.643,0,0,0,24,9Zm0,25A10,10,0,1,1,34,24,10,10,0,0,1,24,34Zm0-16a6,6,0,1,0,6,6A6,6,0,0,0,24,18Z')
+                                rect.closed-eye( fill="#c3cad9" x='20.133' y='2.117' height='44' transform='translate(23.536 -8.587) rotate(45)')
+                                rect.closed-eye(x='22' y='3.984' width='4' height='44' transform='translate(25.403 -9.36) rotate(45)' style='fill:#fff')
+                        input(required placeholder='Пароль' id="password" name="password" type="text").form__input.form__input--password
+                        
                         .modal__buttons
                             button(type="submit").modal__enter.btn.btn--blue Войти на сайт
                             label(for='sberID') Если подключен
