--- a/src/pug/sections/_portfolio-cards.pug
+++ b/src/pug/sections/_portfolio-cards.pug
@@ -5,123 +5,123 @@ section.portfolio-cards
             span.portfolio-cards__counter 10 456
         .portfolio-cards__wrapper
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-1.webp', 'card-avatar-1.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '2', '75', 'digital-profile.html')
+                +portfolio-card('', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '20', '2', '75', 'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--handshake Достижение: Рукопожатие
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--handshake Достижение: Рукопожатие
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#handshake")
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#trophy" )
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-2.webp', 'card-avatar-2.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '21', '1', '15',  'digital-profile.html')
+                +portfolio-card('card-avatar-2.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '21', '1', '42',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#trophy")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-3.webp', 'card-avatar-3.png', 'Родион Нугзарович К.', 'Гуманитарный Факультет', 'Политология', '22', '2', '85',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-3.png', 'Родион Нугзарович К.', 'Гуманитарный Факультет', 'Политология', '22', '2', '85',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--paint-palette Достижение: Искусство
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--paint-palette Достижение: Искусство
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#paint-palette")
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#trophy")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-4.webp', 'card-avatar-4.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '23', '3', '100',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-4.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '23', '3', '100',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--handshake Достижение: Рукопожатие
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--handshake Достижение: Рукопожатие
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#handshake")
-                        li.achievement.achievement--paint-palette Достижение: Искусство
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--paint-palette Достижение: Искусство
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#paint-palette")
-                        li.achievement.achievement--notebook Достижение: Книжка
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--notebook Достижение: Книжка
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#notebook")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-5.webp', 'card-avatar-5.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '24', '4', '75',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-5.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '24', '4', '75',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--handshake Достижение: Рукопожатие
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--handshake Достижение: Рукопожатие
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#handshake")
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#trophy")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-6.webp', 'card-avatar-6.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '25', '5', '15',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-6.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '25', '5', '15',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#trophy")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-7.webp', 'card-avatar-7.png', 'Родион Нугзарович К.', 'Факультет искусств', 'Педагогическое образование', '26', '10', '85',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-7.png', 'Родион Нугзарович К.', 'Факультет искусств', 'Педагогическое образование', '26', '10', '85',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--paint-palette Достижение: Искусство
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--paint-palette Достижение: Искусство
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#paint-palette")
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#trophy" )
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-8.webp', 'card-avatar-8.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '27', '2', '100',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-8.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '27', '2', '100',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--paint-palette Достижение: Искусство
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--paint-palette Достижение: Искусство
                             svg.achievement-icon(width="18" height="18")
                                 use(href="#paint-palette")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-9.webp', 'card-avatar-9.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '28', '2', '75',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-9.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '28', '2', '75',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--handshake Достижение: Рукопожатие
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--handshake Достижение: Рукопожатие
                             svg.achievement-icon( width="18" height="18")
                                 use(href="#handshake")
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon( width="18" height="18")
                                 use(href="#trophy")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-10.webp', 'card-avatar-10.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '29', '2', '15',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-10.png', 'Анастасия Олеговна Б.', 'Факультет искусств', 'Педагогическое образование', '29', '2', '15',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon( width="18" height="18")
                                 use(href="#trophy")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-11.webp', 'card-avatar-11.png', 'Родион Нугзарович К.', 'Факультет искусств', 'Педагогическое образование', '30', '2', '85',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-11.png', 'Родион Нугзарович К.', 'Факультет искусств', 'Педагогическое образование', '30', '2', '85',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon( width="18" height="18")
                                 use(href="#trophy")
-                        li.achievement.achievement--paint-palette Достижение: Искусство
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--paint-palette Достижение: Искусство
                             svg.achievement-icon( width="18" height="18")
                                 use(href="#paint-palette")
-                        li.achievement.achievement--notebook Достижение: Книжка
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--notebook Достижение: Книжка
                             svg.achievement-icon( width="18" height="18")
                                 use(href="#notebook")
 
             a(href="digital-profile.html")
-                +portfolio-card('card-avatar-12.webp', 'card-avatar-12.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '111', '2', '100',  'digital-profile.html')
+                +portfolio-card( 'card-avatar-12.png', 'Мария Владимировна Н.', 'Факультет искусств', 'Педагогическое образование', '111', '2', '100',  'digital-profile.html')
                     ul.achievements__list
-                        li.achievement.achievement--handshake Достижение: Рукопожатие
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--handshake Достижение: Рукопожатие
                             svg.achievement-icon( width="18" height="18")
                                 use(href="#handshake")
-                        li.achievement.achievement--paint-palette Достижение: Искусство
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--paint-palette Достижение: Искусство
                             svg.achievement-icon( width="18" height="18")
                                 use(href="#paint-palette")
-                        li.achievement.achievement--cup Достижение: Кубок
+                        li(data-tooltip="Рукопожатие" data-flow="up").achievement.achievement--cup Достижение: Кубок
                             svg.achievement-icon( width="18" height="18")
                                 use(href="#trophy")
 
-            .portfolio-cards__pagination.pagination
+            .portfolio-cards__pagination.pagination 
                 .pagination__wrapper
                     span.pagination__button.pagination__button--back
                         a(href="#").pagination__link.pagination__link--back Назад
