--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -4,10 +4,11 @@
     align-items: center;
     padding-top: 20px;
     margin-bottom: 21px;
-    width: 238px;
+    width: 315px;
     background: #ffffff;
     border-radius: 4px;
     transition: 0.5s;
+    min-height: 403px;
     &:hover,
     &:focus {
         box-shadow: 0px 5px 20px rgba(110, 119, 129, 0.05);
@@ -83,10 +84,14 @@ $textShadow: rgba(black, 0.35) 1px 1px 1px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        background-image: url("../img/avatar-not-found.svg");
+        background-color: #fff;
+        width: 130px;
+        height: 129px;
     }
 }
 
-$step: 5;
+$step: 1;
 $loops: round(100 / $step);
 $increment: 360 / $loops;
 $half: round($loops / 2);
@@ -94,32 +99,16 @@ $half: round($loops / 2);
     .progress--circle.progress--#{$i * $step}:after {
         @if $i < $half {
             $nextDeg: 90deg + ($increment * $i);
-            background-image: linear-gradient(
-                    90deg,
-                    $backColor 50%,
-                    transparent 50%,
-                    transparent
-                ),
-                linear-gradient(
-                    $nextDeg,
-                    $themeColor 50%,
-                    $backColor 50%,
-                    $backColor
-                );
+            background: url(../img/avatar-not-found.svg) no-repeat center,
+                linear-gradient(90deg, $backColor 50%, transparent 50%, transparent),
+                linear-gradient($nextDeg, $themeColor 50%, $backColor 50%, $backColor);
+            background-size: 100%, 100%, 100%, 100%;
         } @else {
             $nextDeg: -90deg + ($increment * ($i - $half));
-            background-image: linear-gradient(
-                    $nextDeg,
-                    $themeColor 50%,
-                    transparent 50%,
-                    transparent
-                ),
-                linear-gradient(
-                    270deg,
-                    $themeColor 50%,
-                    $backColor 50%,
-                    $backColor
-                );
+            background: url(../img/avatar-not-found.svg) no-repeat center,
+                linear-gradient($nextDeg, $themeColor 50%, transparent 50%, transparent),
+                linear-gradient(270deg, $themeColor 50%, $backColor 50%, $backColor);
+            background-size: 100%, 100%, 100%, 100%;
         }
     }
 }
