--- a/src/scss/blocks/_enter.scss
+++ b/src/scss/blocks/_enter.scss
@@ -1,12 +1,13 @@
 .enter {
-  margin-bottom: 32px;
+  padding-bottom: 32px;
+  padding-top: 37px;
   display: none;
-
+  background: $c-blue-background;
   @media (min-width: $mobile) {
     display: block;
   }
   @media (min-width: $tablet) {
-    margin-bottom: 66px;
+    padding-bottom: 66px;
   }
 }
 
