--- a/src/scss/blocks/_info.scss
+++ b/src/scss/blocks/_info.scss
@@ -1,3 +1,17 @@
+.info {
+    position: relative;
+}
+
+.info-bg {
+    @media (min-width: $tablet) {
+        position: absolute;
+        width: 100%;
+        height: 280px;
+        background: $c-blue-background;
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 6vw));
+    }
+}
+
 .info-container {
     flex-direction: row;
     justify-content: space-between;
