--- a/src/scss/blocks/_login.scss
+++ b/src/scss/blocks/_login.scss
@@ -10,6 +10,11 @@
     }
 }
 
+.login {
+    width: 100%;
+    position: absolute;
+}
+
 .login__modal {
     background: $c-light;
     border-radius: 4px;
