--- a/src/scss/blocks/_new-section.scss
+++ b/src/scss/blocks/_new-section.scss
@@ -8,12 +8,13 @@
 }
 
 .new-section__link {
-  display: block;font-size: rem-calc(14);
+  display: block;
+  font-size: rem-calc(14);
   line-height: 16px;
   color: $c-darkgrey;
   position: relative;
   padding-left: 10px;
-  transition: .2s;
+  transition: 0.2s;
   &:hover {
     padding-left: 15px;
   }
@@ -28,6 +29,9 @@
 .new-section__hero {
   position: relative;
   margin-bottom: 54px;
+  max-height: 350px;
+  overflow: hidden;
+  border-radius: 4px;
 }
 
 .new-section__content {
@@ -47,11 +51,7 @@
     width: 100%;
     height: 100%;
     top: 0;
-    background: linear-gradient(
-      180deg,
-      rgba(68, 68, 68, 0) 0%,
-      rgba(0, 0, 0, 0.4) 100%
-    );
+    background: linear-gradient(180deg, rgba(68, 68, 68, 0) 0%, rgba(0, 0, 0, 0.4) 100%);
   }
   img {
     border-radius: 4px;
@@ -130,7 +130,7 @@
   p {
     font-size: 16px;
     line-height: 26px;
-    color: #6E7781
+    color: #6e7781;
   }
 }
 
