--- a/src/scss/blocks/_select.scss
+++ b/src/scss/blocks/_select.scss
@@ -44,15 +44,17 @@
                 height: 30px;
                 left: 0;
                 top: 0;
-                opacity: 0.5;
                 text-align: center;
                 transition: all 0.2s ease;
             }
 
             &:hover {
-                background-color: mix(#efefef, red, 70%);
+                background-color: rgba(52, 100, 224, 1);
                 &:after {
                     opacity: 1;
+                }
+                &::before {
+                    background-color: rgba(41, 85, 201, 1);
                 }
             }
         }
@@ -65,17 +67,14 @@
         width: 100%;
         font-size: 16px;
         line-height: 26px;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
         > div {
-
-            padding: 12px 14px;
+            padding: 12.3px 14px;
             cursor: pointer;
             transition: all 0.2s ease;
             position: relative;
 
             &:not(.subopt) {
-                font-weight: bold;
+                font-weight: 400;
             }
             &.subopt {
                 padding-left: 2rem;
@@ -94,7 +93,7 @@
             }
 
             &:hover {
-                background-color: #efefef;
+                background-color: #f1f4f9;
 
                 &:after {
                     opacity: 1;
@@ -107,11 +106,6 @@
                 font-weight: 300;
                 &:after {
                     opacity: 1;
-                }
-
-                &:hover {
-                    background-color: $c-red;
-
                 }
             }
         }
@@ -132,6 +126,8 @@
         min-height: 300px;
         position: absolute;
         z-index: 300;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
         .fancy-select-overlay {
             position: fixed;
             left: 0;
@@ -145,14 +141,11 @@
         }
         .options {
             display: block;
+            box-shadow: 0px 5px 20px rgba(110, 119, 129, 0.05);
         }
 
         &:after {
-            background-image: linear-gradient(
-                    to bottom right,
-                    transparent 50%,
-                    #bbb 51%
-                ),
+            background-image: linear-gradient(to bottom right, transparent 50%, #bbb 51%),
                 linear-gradient(to bottom left, transparent 50%, #bbb 51%);
         }
     }
