--- a/src/scss/blocks/_settings.scss
+++ b/src/scss/blocks/_settings.scss
@@ -153,6 +153,9 @@
         color: $c-blue;
         border-bottom: 2px solid $c-blue;
     }
+    .tabs__button {
+        margin-bottom: 0;
+    }
 }
 
 .settings__tab {
