--- a/src/scss/general/scaffolding.scss
+++ b/src/scss/general/scaffolding.scss
@@ -25,7 +25,6 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 
-
     @media (max-width: $tablet) and (orientation: portrait) {
         min-height: calc(var(--vh, 1vh) * 100);
     }
@@ -39,10 +38,6 @@ body {
             overflow: hidden;
         }
     }
-}
-
-.body--background {
-    background: $c-blue-background;
 }
 
 a {
@@ -118,6 +113,13 @@ img {
 
 .scrollbar-custom > *::-webkit-scrollbar {
     width: 2px;
+    transition: 0.2s;
+    background-color: rgba(241, 244, 249, 1);
+}
+
+.scrollbar-custom-hover > *::-webkit-scrollbar {
+    width: 4px;
+    transition: 0.2s;
     background-color: rgba(241, 244, 249, 1);
 }
 
@@ -161,13 +163,14 @@ input:not([type="range"]) {
     }
     &[type="text"],
     &[type="email"],
-    &[type="password"]{
+    &[type="password"] {
         border: 1px solid #e4ecfa;
         box-sizing: border-box;
         border-radius: 3px;
         padding: 9px 3px 8px 15px;
     }
-    &:hover,&:focus {
+    &:hover,
+    &:focus {
         border-color: $c-blue;
         box-shadow: 0 0 0 2px rgba(156, 186, 240, 0.5);
         outline: none;
@@ -188,7 +191,7 @@ select {
     box-sizing: border-box;
     border-radius: 4px;
     cursor: pointer;
-    background: url('../img/icons/icons.svg#vector') 95% center/11px no-repeat;
+    background: url("../img/icons/icons.svg#vector") 95% center/11px no-repeat;
     &:focus,
     &:hover {
         border-color: $c-blue;
